--- a/app.json
+++ b/app.json
@@ -1,12 +1,10 @@
 {
+  "name": "AppKitten",
+  "display": "AppKitten",
   "expo": {
-    "name": "HelloWorld",
-    "slug": "ui-kitten",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "uiKitten",
+    "slug": "uikitten",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
