--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^5.0.9",
     "@ui-kitten/components": "^4.4.1",
     "@ui-kitten/eva-icons": "^4.4.1",
+    "axios": "^0.19.2",
     "expo": "36.0.0",
     "formik": "^2.1.4",
     "react": "16.9.0",
@@ -31,6 +32,10 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.13",
     "react-native-svg": "9.13.3",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0",
     "yup": "^0.28.1"
   },
   "devDependencies": {
@@ -39,6 +44,7 @@
     "@react-native-community/eslint-config": "^0.0.7",
     "@types/node": "ts3.8",
     "@types/react-native": "ts3.8",
+    "@types/react-redux": "^7.1.7",
     "@types/yup": "ts3.8",
     "@ui-kitten/metro-config": "^4.4.1",
     "babel-jest": "^24.9.0",
